--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "react": "^18.3.1",
+    "env": "^0.0.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
     "firebase": "^10.8.1",
